# chess-game

./: CMakeLists.txt
include/: Bishop.h  Board.h  GameController.h  GameRules.h  King.h  Knight.h  Move.h  Pawn.h  Piece.h  Pieces.h  PlayerManager.h  Queen.h  Rook.h  StatefulPiece.h
src/: Bishop.cpp  Board.cpp  GameController.cpp  GameRules.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp  main.cpp
